--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 
 .array-component {
   display: flex;
-  align-items: flex-end;
+  /*align-items: flex-end;*/
 }
 
 .array-element-component {
@@ -22,4 +22,5 @@ code {
   width: 30px;
   color: white;
   background-color: cadetblue;
+  margin: 1px;
 }
