--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font: 14px Futura, sans-serif;
+  margin: 20px;
+  background-color: whitesmoke;
 }
 
 code {
@@ -12,9 +9,50 @@ code {
     monospace;
 }
 
+.title {
+  font-size: 30px;
+  margin-bottom: -15px;
+}
+
+.menu-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: black;
+  color: whitesmoke;
+  font-size: 14px;
+}
+
+.menu-bar button {
+  border: none;
+  outline: none;
+  padding: 20px;
+  background-color: black;
+  color: whitesmoke;
+  font: 14px Futura, sans-serif;
+}
+
+.menu-bar button:hover {
+  border: none;
+  background-color: cadetblue;
+}
+
+.array-size-options {
+  display: flex;
+  padding: 18px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.animation-speed-options {
+  display: flex;
+  padding: 18px;
+  margin-right: 10px;
+}
+
 .array-component {
   display: flex;
-  /*align-items: flex-end;*/
+  justify-content: center;
 }
 
 .array-element-component {
