--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
-  font: 14px Futura, sans-serif;
+  /*font: 14px Futura, sans-serif;*/
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
   margin: 20px;
   background-color: whitesmoke;
 }
